--- a/style.css
+++ b/style.css
@@ -25,12 +25,8 @@ figure, blockquote, dl, dd {
 ul,
 ol {
   list-style: none;
-}
-
-/* Set shorter line heights on headings and interactive elements */
-h1, h2, h3, h4,
-button, input, label {
-  line-height: 1.1;
+  margin: 0;
+  padding: 0;
 }
 
 /* Balance text wrapping on headings */
@@ -139,7 +135,7 @@ textarea:not([rows]) {
 }
 
 .flow {
-  --flow-space: 2em;
+  --flow-space: 1.5em;
 }
 
 .flow > * + * {
@@ -152,6 +148,7 @@ a {
     text-decoration: none;
     display: inline-block;
 }
+
 
 .btn {
     border: none;
@@ -184,15 +181,23 @@ body {
 /* HEADER */
 
 .header {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: auto 1fr 1fr auto;
     align-items: center;
-    padding: 1rem;
+    padding: 3rem;
+}
+
+.logo-wrapper {
+  grid-column: 1 / 3;
+}
+
+.navbar {
+  grid-column: 4/ 5;
 }
 
 .navbar__list {
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 .navbar__list__item__link:is(:hover, :focus) {
@@ -219,6 +224,7 @@ body {
 /* BENEFITS */
 
 .benefits {
+  --flow-space: 7em;
   display: grid;
   grid-template-columns: 1fr;
   gap: 3rem;
@@ -228,6 +234,7 @@ body {
 @media (min-width: 50rem) {
   .benefits {
     grid-template-columns: 1fr 1fr;
+    gap: 5rem;
   }
 }
 
@@ -240,6 +247,7 @@ body {
 }
 
 .big-benefit {
+  --flow-space: 7em;
   display: grid;
   grid-template-columns: 1fr;
   gap: 3rem;
@@ -252,24 +260,24 @@ body {
   }
 }
 
+.big-benefit__link__wrapper:has(:hover) {
+  :is(.big-benefit__link, .big-benefit__link__icon__use) {
+    color: currentColor;
+    fill: currentColor;
+  }
+  .big-benefit__link::after {
+    background-color: currentColor;
+  }
+}
+
 .big-benefit__link {
-  /* display: flex;
-  gap: .5em; */
-  align-items: center;
-  text-decoration: underline;
-  text-underline-offset: .5em;
   color: var(--clr-accent-100);
   margin-right: 2rem;
   position: relative;
 
-  &:hover {
-    color: var(--clr-white);
+  svg {
+    vertical-align: middle;
   }
-
-  .big-benefit__link__icon__use:hover {
-    fill: currentColor;
-  }
-  
 }
 
 .big-benefit__link::after {
@@ -277,14 +285,16 @@ body {
   content: "";
   width: 100%;
   height: 2px;
-  background-color: red;
+  background-color: var(--clr-accent-100);
   position: absolute;
   bottom: -5px;
 }
 
+
 /* TESTIMONAILS */
 
 .testimonials {
+  --flow-space: 7em;
   display: grid;
   grid-template-columns: 1fr;
   gap: 2rem;
@@ -338,34 +348,74 @@ body {
   background-color: var(--clr-primary-200);
   border-radius: 10px;
   padding: 2rem;
-  transform: translateY(50%);
+  /* transform: translateY(50%); */
+}
 
+.cta__form {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
+}
+
+@media (min-width: 40rem) {
   .cta__form {
-    display: grid;
     grid-template-columns: 1fr auto;
-    gap: 2rem;
-  }
-
-  .email-input {
-    border: none;
-    border-radius: 20px;
   }
 }
+
+.email-input {
+  border: none;
+  border-radius: 20px;
+}
+
+
 
 /* FOOTER */
 
 .footer {
   background-color: var(--clr-primary-400);
+  padding: 3rem;
 }
 
 .footer-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     gap: 2rem;
+
+      :nth-child(1) {
+        grid-area: 1 / 1 / 3 / 3;
+      }
+
+      :nth-child(2) {
+        grid-area: 1 / 3 / 3 / 5;
+      }
+
+      :nth-child(3) {
+        grid-area: 1 / 5 / 5 / 6;
+      }
+
+      :nth-child(4) {
+        grid-area: 1 / 6 / 4 / 7;
+      }
+
+      :nth-child(5) {
+        grid-area: 1 / 7 / 2 / 8;
+      }
 }
 
 :is(.location, .phone, .email) {
   display: flex;
   gap: 1rem;
   align-items: center;
+}
+
+.social-media {
+  display: flex;
+  gap: 1em;
+}
+
+.social-media svg {
+  width: 30px;
 }
 
