--- a/style.css
+++ b/style.css
@@ -101,10 +101,11 @@ textarea:not([rows]) {
     /* COLORS */
 
     /* Primary */
-    --clr-primary-100: hsl(219, 30%, 18%);
-    --clr-primary-200: hsl(217, 28%, 15%);
-    --clr-primary-300: hsl(218, 28%, 13%);
-    --clr-primary-400: hsl(216, 53%, 9%);
+
+    --clr-primary-100: hsl(216, 53%, 9%);
+    --clr-primary-200: hsl(218, 28%, 13%);
+    --clr-primary-300: hsl(217, 28%, 15%);
+    --clr-primary-400: hsl(219, 30%, 18%);
 
     /* Accent */
     --clr-accent-100: hsl(176, 68%, 64%);
@@ -139,7 +140,7 @@ textarea:not([rows]) {
 }
 
 .flow > * + * {
-    margin-top: var(--flow-space, 1em);
+    margin-block-start: var(--flow-space, 1em);
 }
 
 /* COMPONENTS */
@@ -168,15 +169,9 @@ a {
 body {
     font-family: var(--ff-open-sans);
     color: var(--clr-white);
-    background-color: var(--clr-primary-300);
-   /*  background-image: url('images/bg-curvy-desktop.svg');
-    background-repeat: no-repeat; */
+    background-color: var(--clr-primary-200);
 }
 
-.main {
-  max-width: 70rem;
-  margin-inline: auto;
-}
 
 /* HEADER */
 
@@ -185,6 +180,7 @@ body {
     grid-template-columns: auto 1fr 1fr auto;
     align-items: center;
     padding: 3rem;
+    background-color: var(--clr-primary-300);
 }
 
 .logo-wrapper {
@@ -211,6 +207,15 @@ body {
     display: grid;
     grid-template-columns: 1fr min(70ch, 100%) 1fr;
     text-align: center;
+    background-color: var(--clr-primary-300);
+}
+
+@media (min-width: 50rem) {
+  .intro {
+  background-image: url('images/bg-curvy-desktop.svg');
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
 }
 
 .intro > * {
@@ -218,7 +223,7 @@ body {
 }
 
 .testimonial {
-    background-color: var(--clr-primary-100);
+    background-color: var(--clr-primary-400);
 }
 
 /* BENEFITS */
@@ -246,12 +251,17 @@ body {
   text-align: center;
 }
 
+.benefit__paragraph {
+  --flow-space: 1em;
+}
+
 .big-benefit {
   --flow-space: 7em;
   display: grid;
   grid-template-columns: 1fr;
   gap: 3rem;
   align-items: center;
+  padding-inline: 4rem;
 }
 
 @media (min-width: 50rem) {
@@ -290,14 +300,19 @@ body {
   bottom: -5px;
 }
 
+.big-benefit__text__paragraphs {
+  --flow-space: 1em;
+}
+
 
 /* TESTIMONAILS */
 
 .testimonials {
-  --flow-space: 7em;
+  --flow-space: 8em;
   display: grid;
   grid-template-columns: 1fr;
   gap: 2rem;
+  padding-inline: 4rem;
 }
 
 @media (min-width: 50rem) {
@@ -343,12 +358,12 @@ body {
 
 .cta {
   text-align: center;
-  max-width: 40rem;
+  max-width: 45rem;
   margin-inline: auto;
-  background-color: var(--clr-primary-200);
+  background-color: var(--clr-primary-300);
   border-radius: 10px;
   padding: 2rem;
-  /* transform: translateY(50%); */
+  transform: translateY(50%);
 }
 
 .cta__form {
@@ -366,6 +381,16 @@ body {
 .email-input {
   border: none;
   border-radius: 20px;
+  padding-inline: 1rem;
+  color: #000;
+}
+
+.error-message {
+  text-align: initial;
+  margin-top: .5em;
+  padding-inline-start: 1rem;
+  display: none;
+  color: var(--clr-accent-200);
 }
 
 
@@ -373,34 +398,39 @@ body {
 /* FOOTER */
 
 .footer {
-  background-color: var(--clr-primary-400);
-  padding: 3rem;
+  background-color: var(--clr-primary-100);
+  padding: 10rem 3rem 6rem;
 }
 
-.footer-container {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    gap: 2rem;
+ .footer-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 3rem;
+ }
 
-      :nth-child(1) {
-        grid-area: 1 / 1 / 3 / 3;
-      }
+      @media (min-width: 50rem) {
+        .footer-container {
+        grid-template-columns: repeat(7, 1fr);
 
-      :nth-child(2) {
-        grid-area: 1 / 3 / 3 / 5;
-      }
-
-      :nth-child(3) {
-        grid-area: 1 / 5 / 5 / 6;
-      }
-
-      :nth-child(4) {
-        grid-area: 1 / 6 / 4 / 7;
-      }
-
-      :nth-child(5) {
-        grid-area: 1 / 7 / 2 / 8;
+          :nth-child(1) {
+            grid-column: 1 / 3;
+          }
+    
+          :nth-child(2) {
+            grid-column: 3 / 5;
+          }
+    
+          :nth-child(3) {
+            grid-column: 5 / 6;
+          }
+    
+          :nth-child(4) {
+            grid-column: 6 / 7;
+          }
+    
+          :nth-child(5) {
+            grid-column: 7 / 8;
+          }
       }
 }
 
@@ -410,12 +440,31 @@ body {
   align-items: center;
 }
 
+
+.email {
+  --flow-space: .8em;
+}
+
+.sitemap-first__list__item {
+  --flow-space: .8em;
+}
+
+.sitemap-second__list__item {
+  --flow-space: .8em; 
+}
+
 .social-media {
   display: flex;
-  gap: 1em;
+  gap: 1rem;
+}
+
+.social-media__link:is(:hover) svg{
+  fill: var(--clr-accent-100);
+  transition: .25s;
 }
 
 .social-media svg {
   width: 30px;
+  height: 30px;
 }
 
