--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ a {
 
 .btn {
     border: none;
-    padding: .7em 2.2em;
+    padding: .8em 3em;
     cursor: pointer;
     border-radius: 20px;
     background: linear-gradient(90deg, var(--clr-accent-100), var(--clr-accent-300));
@@ -205,17 +205,13 @@ body {
 
 .intro {
     display: grid;
-    grid-template-columns: 1fr min(70ch, 100%) 1fr;
+    grid-template-columns: 1fr min(60ch, 100%) 1fr;
     text-align: center;
     background-color: var(--clr-primary-300);
-}
-
-@media (min-width: 50rem) {
-  .intro {
-  background-image: url('images/bg-curvy-desktop.svg');
-  background-repeat: no-repeat;
-  background-position: bottom;
-}
+    padding-inline: 2rem;
+    background-image: url('images/bg-curvy-desktop.svg');
+    background-repeat: no-repeat;
+    background-position: bottom;
 }
 
 .intro > * {
@@ -356,6 +352,12 @@ body {
 
 /* CTA */
 
+.cta-wrapper {
+  display: grid;
+  place-content: center;
+  padding-inline: 2rem;
+}
+
 .cta {
   text-align: center;
   max-width: 45rem;
@@ -372,7 +374,7 @@ body {
   gap: 2rem;
 }
 
-@media (min-width: 40rem) {
+@media (min-width: 50rem) {
   .cta__form {
     grid-template-columns: 1fr auto;
   }
@@ -381,14 +383,14 @@ body {
 .email-input {
   border: none;
   border-radius: 20px;
-  padding-inline: 1rem;
-  color: #000;
+  padding: .8em 3em;
+  color: var(--clr-primary-200);
 }
 
 .error-message {
   text-align: initial;
   margin-top: .5em;
-  padding-inline-start: 1rem;
+  padding-inline-start: 3em;
   display: none;
   color: var(--clr-accent-200);
 }
@@ -399,7 +401,7 @@ body {
 
 .footer {
   background-color: var(--clr-primary-100);
-  padding: 10rem 3rem 6rem;
+  padding: 12rem 3rem 6rem;
 }
 
  .footer-container {
@@ -456,6 +458,7 @@ body {
 .social-media {
   display: flex;
   gap: 1rem;
+  justify-content: center;
 }
 
 .social-media__link:is(:hover) svg{
